# alpacavision-altiplano

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_webapp.py
config/: classes.yaml  dataset_stage1.yaml  dataset_stage1_clean.yaml  train_classifier.yaml  train_detector.yaml  train_stage1_clean.yaml  train_stage1_clean_s.yaml
docs/: ARRANCAR_SESION.md  CLASIFICACION_OCULAR_VET.md  DATASET_CARD.md  ESTADO_PAPER.md  INSTRUCCIONES_VETERINARIO.md  PLAN_SIGUIENTE_NIVEL.md  PRECRIBADO_IA_batch01.md  annotation_guide_stage2.md
migrations/versions/: 4721eb22fef2_add_system_config_table.py  5ecf0c0005ac_initial_schema.py
outputs/figures/: classifier_eyes_eval_report.txt  classifier_eyes_honest_metrics.json  classifier_eyes_honest_predictions.json  classifier_eyes_honest_report.txt  (+4 more)
scripts/: augment_anomaly_crops.py  auto_label.py  clean_detector_dataset.py  consolidate_dataset.py  create_admin.py  eval_detector.py  evaluate_classifiers.py  export_model.sh  extract_crops_from_labels.py  extract_crops_new.py  gen_diagram_figs.py  gen_fig8_detections.py  gen_honest_summary_figs.py  generate_fig6_tl_diagram.py  generate_gradcam_examples.py  label_crops_with_vision.py  make_vet_labeling_batch.py  pseudo_label.py  regen_classifier_figs.py  resolve_label_conflicts.py  run_pipeline.py  run_training.sh  select_annotation_batch.py  setup_project.sh  train_classifiers.sh  train_eyes_honest.py  train_two_stage.py  upload_labels_roboflow.py
tests/: test_metrics.py  test_model.py  test_preprocess.py  test_report_generator.py
(+53 files in other folders)
